2013-08-13 Jens Thoms Toerring    <jt@toerring.de>

	* lib/browser.c etc.: New type FL_DESELECTABLE_HOLD_BROWSER
	added.
	* fdesign: Some more bug fixes and cleanup for consistency
	of handling.

2013-08-13 Jens Thoms Toerring    <jt@toerring.de>

	* lib/xyplot.c: Logarithmically spaces minor tic added
	aa suggested by Bill Unruh and minor bug fixes

2013-08-12 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign: Some more bug fixes and modification of tge
	control panel layout. Documentation update.

2013-08-11 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign: Bug fixes in handling of group cutting/pasting

2013-08-10 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign: Included Paul Nichelsons patch for reading
	.fd files with xyplot objects.

2013-08-09 Jens Thoms Toerring    <jt@toerring.de>

	* lib/tabfolder.c: Problem with setting graphic properties
	of the tab riders infividually ad all at once pointed out
	by Rob Carpenter hopefully fixed.

	* lib/objects.c: Slow down of fl_unfreeze_form() due to the
	fli_recalc_interactions function noticed by Rob Carpenter
	whle not completely eliminated hopefully made less noticable.

	* fd2ps/psobj.c: Support for FL_SPINNER added

	* fdesign: Inconsistencies in handling of path names pointed
	out by Donato Lorenzo López hopefully fixed.

2013-01-05 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_select.c: Cutting/copying whole groups didn't
	work properly, now only the members of the group get
	copied/cut, but not the property of belonging to a group.

2013-01-04 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_select.c: Raising and lowering objects
	didn't work properly

	* fdesign/fd_control.c: Store and reset button state
	before and after test.

	* autogen.sh: Cleanup

2013-01-03 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_select.c: Ungrouping didn't work properly
	since also all members of the group got deleted

	*fdesign/fd_main.c: As proposed by Michal Szymanski a